Updating GC example to use a single agent.

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -489,11 +489,9 @@
     "### 6. Distributing Agents\n",
     "Academy uses a cloud hosted exchange and Globus Compute to deploy and orchestrate distributed agentic systems. \n",
     "\n",
-    "Here we use the GCExecutor (Globus Compute Executor) to deploy the agents remotely using Globus Compute. Globus Compute is a widely used FaaS platform that allows you to run Pyhton functions on arbitrary remote computing resources. \n",
+    "Here we use the GCExecutor (Globus Compute Executor) to deploy the agents remotely using Globus Compute. Globus Compute is a widely used FaaS platform that allows you to run Python functions on arbitrary remote computing resources. \n",
     "\n",
     "We use the HttpExchange using our cloud-hosted exchange. This exchange relies on Globus Auth. When running the following code you will need to first authenticate to give permission for your Academy program to use the exchange.\n",
-    "\n",
-    "Note: we use the same agents defined above in step 3.  \n",
     "\n",
     "Note: you will need to have academy-py installed in your Globus Compute environment. E.g., to create a docker container with a running endpoint\n",
     "\n",
@@ -502,7 +500,10 @@
     "pip install academy-py\n",
     "globus-compute-endpoint configure --multi-user false\n",
     "globus-compute-endpoint start default\n",
-    "````"
+    "````\n",
+    "The following example will run a HelloWorld agent on the remote computer and return a message that includes system information about that remote computer. \n",
+    "\n",
+    "Remember to set your Globus Compute Endpoint ID in the code below. "
    ]
   },
   {
@@ -528,8 +529,16 @@
     "from globus_compute_sdk import Executor as GCExecutor\n",
     "\n",
     "EXCHANGE_ADDRESS = 'https://exchange.academy-agents.org'\n",
-    "GLOBUS_COMPUTE_ENDPOINT = 'e80fd8ba-98d2-4f07-9f96-51830cbd7145'\n",
+    "GLOBUS_COMPUTE_ENDPOINT = ''  # Set Globus Compute Endpoint ID\n",
     "\n",
+    "class HelloWorldRemote(Agent):\n",
+    "    \n",
+    "    @action\n",
+    "    async def hello(self, value) -> str:\n",
+    "        import platform\n",
+    "        return f\"Hello {value} (from {platform.platform()})\"\n",
+    "\n",
+    "        \n",
     "async def main() -> int:\n",
     "\n",
     "    executor = GCExecutor(GLOBUS_COMPUTE_ENDPOINT)\n",
@@ -541,28 +550,24 @@
     "        ),\n",
     "        executors=executor,\n",
     "    ) as manager:\n",
-    "        lowerer = await manager.launch(Lowerer)\n",
-    "        reverser = await manager.launch(Reverser)\n",
-    "        coordinator = await manager.launch(\n",
-    "            Coordinator,\n",
-    "            args=(lowerer, reverser),\n",
-    "        )\n",
+    "        agent_handle = await manager.launch(HelloWorldRemote)\n",
     "\n",
-    "        text = 'DEADBEEF'\n",
-    "        expected = 'feebdaed'\n",
-    "\n",
-    "        print(f\"Invoking process({text}) on{coordinator.agent_id}\")\n",
-    "\n",
-    "        result = await coordinator.process(text)\n",
+    "        print(await agent_handle.hello(\"World\"))\n",
     "        \n",
-    "        print(f\"Received result: {result}\")\n",
-    "\n",
     "    return 0\n",
     "    \n",
     "# In a Jupyter notebook, we use top-level `await` to run the async main() coroutine\n",
     "# because the notebook already has an event loop running.\n",
     "await main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7919a9b1-dc19-4de8-9388-eba912f8d4f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
