--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -333,7 +333,7 @@
     "\n",
     "Running this example requires langchain and langchain-openai.\n",
     "````\n",
-    "pip install langchain>=1.0\n",
+    "pip install 'langchain>=1.0'\n",
     "pip install langchain-openai\n",
     "````\n",
     "\n",
